example/errors/go.mod
module github.com/foomo/gotsrpc/v2/example/errors

go 1.16

require (
	github.com/foomo/gotsrpc/v2 v2.0.0
	github.com/pkg/errors v0.9.1
)

require gopkg.in/check.v1 v1.0.0-20201130134442-10cb98267c6c // indirect

replace github.com/foomo/gotsrpc/v2 => ../../
